--- a/demo/index.ejs
+++ b/demo/index.ejs
@@ -3,7 +3,7 @@
 <head>
   <head>
     <meta charset="utf-8">
-    <title>ngx-charts - Angular2 and D3js Charting Framework</title>
+    <title>NGX-Charts-DAG - Directed Acyclic Graph Visualization</title>
 
     <!-- Name of web application (only should be used if the website is used as an app) -->
     <meta name="application-name" content="ngx-charts">
@@ -63,7 +63,7 @@
   </head>
 <body>
   <div class="social-toolbox">
-    <a class="github-button" href="https://github.com/swimlane/ngx-charts" data-style="mega" data-count-href="/swimlane/ngx-charts/stargazers" data-count-api="/repos/swimlane/ngx-charts#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star swimlane/ngx-charts on GitHub">Star</a>
+    <a class="github-button" href="https://github.com/swimlane/ngx-charts-dag" data-style="mega" data-count-href="/swimlane/ngx-charts/stargazers" data-count-api="/repos/swimlane/ngx-charts#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star swimlane/ngx-charts on GitHub">Star</a>
     <div class="addthis_inline_share_toolbox"></div>
   </div>
   <app>Loading...</app>
