--- a/demo/app.component.scss
+++ b/demo/app.component.scss
@@ -160,6 +160,10 @@ main {
       }
     }
 
+    .sidebar-body {
+      padding: 20px;
+    }
+
     input[type=text],
     select {
       width: 100%;
@@ -213,81 +217,9 @@ main {
   background: $color-bg-darker;
 
   .ngx-charts {
-
-    text {
-      fill: $color-text-med;
-    }
-
     .tooltip-anchor {
       fill: rgb(255,255,255);
     }
-
-    .gridline-path {
-      stroke: $color-bg-med;
-    }
-
-    .grid-panel {
-      &.odd {
-        rect {
-          fill: rgba(255,255,255,0.05);
-        }
-      }
-    }
-
-    .force-directed-graph {
-      .edge {
-        stroke: $color-bg-light;
-      }
-    }
-
-    .number-card {
-      p {
-        color: $color-text-light;
-      }
-    }
-
-    .gauge {
-      .background-arc{
-        path {
-          fill: $color-bg-med;
-        }
-      }
-
-      .gauge-tick {
-        path {
-          stroke: $color-text-med;
-        }
-        text {
-          fill: $color-text-med;
-        }
-      }
-    }
-
-    .linear-gauge {
-      .background-bar {
-        path {
-          fill: $color-bg-med;
-        }
-      }
-
-      .units {
-        fill: $color-text-dark;
-      }
-    }
-
-    .timeline {
-      .brush-background {
-        fill: rgba(255,255,255,0.05);
-      }
-
-      .brush {
-        .selection {
-          fill: rgba(255, 255, 255, 0.1);
-          stroke: #aaa;
-        }
-      }
-    }
-
   }
 
   .chart-legend {
@@ -312,20 +244,17 @@ main {
         }
       }
     }
+  }
+}
 
-    .scale-legend-label {
-      color: $color-text-med;
+.directed-graph {
+  .node {
+    text {
+      fill: #fff;
     }
   }
 
-  .advanced-pie-legend {
-    color: $color-text-med;
-
-    .legend-item {
-      &:hover {
-        color: #fff !important;
-      }
-    }
+  .edge {
+    stroke: #666 !important;
   }
-
 }
