--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -20,10 +20,13 @@
         </template>
 
         <template #nodeTemplate let-node>
-          <svg:g class="node">
+          <svg:g class="node"
+            ngx-tooltip
+            [tooltipPlacement]="'top'"
+            [tooltipType]="'tooltip'"
+            [tooltipTitle]="node.label">
             <svg:rect [attr.width]="node.width" [attr.height]="node.height" [attr.fill]="node.options.color" />
             <svg:text alignment-baseline="central" [attr.x]="10" [attr.y]="node.height / 2">{{node.label}}</svg:text>
-            <!-- <svg:circle r="5" [attr.cx]="node.width" [attr.cy]="node.height / 2" [attr.fill]="node.options.color" stroke="#fff" (click)="toggleExpand(node)" /> -->
           </svg:g>
         </template>
 
@@ -31,9 +34,7 @@
           <svg:g class="edge">
             <svg:path
               stroke-width="2"
-              [attr.d]="link.line"
               marker-end="url(#arrow)" >
-              <svg:animate #animation [attr.id]="link.id" attributeName="d" [attr.from]="link.oldLine" [attr.to]="link.line" dur="0.3s" />
             </svg:path>
           </svg:g>
         </template>
@@ -116,13 +117,6 @@
         <strong>Options</strong>
       </h3>
       <div [hidden]="!optsVisible" style="margin-left: 10px;">
-        <div *ngIf="chart.options.includes('showLegend')">
-          <label>
-            <input type="checkbox" [checked]="showLegend" (change)="showLegend = $event.target.checked">
-            Show Legend
-          </label> <br />
-        </div>
-
         <label>Orientation</label>
         <select [(ngModel)]="orientation">
           <option *ngFor="let orient of orientations" [value]="orient.value">{{orient.label}}</option>
