--- a/src/directed-graph/directed-graph.component.scss
+++ b/src/directed-graph/directed-graph.component.scss
@@ -1,6 +1,6 @@
 .directed-graph {
   .edge {
-    stroke: #333;
+    stroke: #666;
     fill: none;
   }
 
@@ -10,6 +10,6 @@
   }
 
   .node-group {
-    transition: 0.5s ease-out;
+    transition: 0.5s ease-in-out;
   }
 }
