--- a/src/directed-graph/directed-graph.component.scss
+++ b/src/directed-graph/directed-graph.component.scss
@@ -2,6 +2,16 @@
   .edge {
     stroke: #666;
     fill: none;
+
+    .edge-label {
+      stroke: none;
+      font-size: 12px;
+      fill: #ffffff;
+    }
+
+    .text-path {
+      dominant-baseline: text-after-edge;
+    }
   }
 
   .panning-rect {
