--- a/release/index.css
+++ b/release/index.css
@@ -1,11 +1,17 @@
 /**
- * ngx-charts v"0.1.1" (https://github.com/swimlane/ngx-charts)
+ * ngx-charts v"0.2.0" (https://github.com/swimlane/ngx-charts)
  * Copyright 2016
  * Licensed under MIT
  */
 .directed-graph .edge {
   stroke: #666;
   fill: none; }
+  .directed-graph .edge .edge-label {
+    stroke: none;
+    font-size: 12px;
+    fill: #ffffff; }
+  .directed-graph .edge .text-path {
+    dominant-baseline: text-after-edge; }
 
 .directed-graph .panning-rect {
   fill: transparent;
