Update demo page

--- a/demo/index.ejs
+++ b/demo/index.ejs
@@ -9,13 +9,13 @@
     <meta name="application-name" content="ngx-charts">
 
     <!-- Short description of the page (limit to 150 characters) -->
-    <meta name="description" content="Angular2 and D3js Data Visualization JavaScript Framework for building composable, re-usable Charts in AngularJS." />
+    <meta name="description" content="Directed Acyclic Graph Visualization for Angular" />
 
     <!-- Short description of your site's subject -->
-    <meta name="subject" content="Angular2 D3 Charting Framework">
+    <meta name="subject" content="Angular2 Directed Acyclic Graph Visualization">
 
     <!-- Very short (10 words or less) description. Primarily for academic papers -->
-    <meta name="abstract" content="Angular2 D3 Charting Framework">
+    <meta name="abstract" content="Angular2 Directed Acyclic Graph Visualization">
 
     <!-- Crawling: All Search Engines -->
     <meta name="robots" content="index,follow,noodp">
@@ -63,7 +63,7 @@
   </head>
 <body>
   <div class="social-toolbox">
-    <a class="github-button" href="https://github.com/swimlane/ngx-charts-dag" data-style="mega" data-count-href="/swimlane/ngx-charts/stargazers" data-count-api="/repos/swimlane/ngx-charts#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star swimlane/ngx-charts on GitHub">Star</a>
+    <a class="github-button" href="https://github.com/swimlane/ngx-charts-dag" data-style="mega" data-count-href="/swimlane/ngx-charts-dag/stargazers" data-count-api="/repos/swimlane/ngx-charts-dag#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star swimlane/ngx-charts-dag on GitHub">Star</a>
     <div class="addthis_inline_share_toolbox"></div>
   </div>
   <app>Loading...</app>
