--- a/release/index.css
+++ b/release/index.css
@@ -1,24 +1,24 @@
 /**
- * ngx-charts v"0.2.0" (https://github.com/swimlane/ngx-charts)
+ * ngx-charts v"1.0.0" (https://github.com/swimlane/ngx-charts)
  * Copyright 2016
  * Licensed under MIT
  */
-.directed-graph .edge {
-  stroke: #666;
-  fill: none; }
-  .directed-graph .edge .edge-label {
-    stroke: none;
-    font-size: 12px;
-    fill: #ffffff; }
-  .directed-graph .edge .text-path {
-    dominant-baseline: text-after-edge; }
-
-.directed-graph .panning-rect {
-  fill: transparent;
-  cursor: move; }
-
-.directed-graph .node-group {
-  -webkit-transition: 0.5s ease-in-out;
-  transition: 0.5s ease-in-out; }
+.directed-graph {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none; }
+  .directed-graph .edge {
+    stroke: #666;
+    fill: none; }
+    .directed-graph .edge .edge-label {
+      stroke: none;
+      font-size: 12px;
+      fill: #ffffff; }
+  .directed-graph .panning-rect {
+    fill: transparent;
+    cursor: move; }
+  .directed-graph .node-group .node:focus {
+    outline: none; }
 
 /*# sourceMappingURL=index.map*/
