--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -13,13 +13,13 @@
         [curve]="curve"
         (select)="select($event)">
 
-        <template #defsTemplate>
+        <ng-template #defsTemplate>
           <svg:marker id="arrow" viewBox="0 -5 10 10" refX="8" refY="0" markerWidth="4" markerHeight="4" orient="auto">
             <svg:path d="M0,-5L10,0L0,5" class="arrow-head" />
           </svg:marker>
-        </template>
+        </ng-template>
 
-        <template #nodeTemplate let-node>
+        <ng-template #nodeTemplate let-node>
           <svg:g class="node"
             ngx-tooltip
             [tooltipPlacement]="'top'"
@@ -28,9 +28,9 @@
             <svg:rect [attr.width]="node.width" [attr.height]="node.height" [attr.fill]="node.options.color" />
             <svg:text alignment-baseline="central" [attr.x]="10" [attr.y]="node.height / 2">{{node.label}}</svg:text>
           </svg:g>
-        </template>
+        </ng-template>
 
-        <template #linkTemplate let-link>
+        <ng-template #linkTemplate let-link>
           <svg:g class="edge">
             <svg:path
               class="line"
@@ -38,16 +38,16 @@
               marker-end="url(#arrow)" >
             </svg:path>
             <svg:text class="edge-label" text-anchor="middle">
-              <textPath 
-                class="text-path" 
-                [attr.href]="'#' + link.id" 
-                [style.dominant-baseline]="link.dominantBaseline" 
+              <textPath
+                class="text-path"
+                [attr.href]="'#' + link.id"
+                [style.dominant-baseline]="link.dominantBaseline"
                 startOffset="50%">
                 {{link.label}}
               </textPath>
             </svg:text>
           </svg:g>
-        </template>
+        </ng-template>
 
       </ngx-charts-directed-graph>
     </div>
