--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -1,7 +1,7 @@
 <main [class]="theme">
   <div class="chart-col">
     <div style="position: absolute; top: 50px; left: 50px; right: 50px; bottom: 50px;">
-      <ngx-charts-directed-graph
+      <ngx-graph
         class="chart-container"
         [view]="view"
         [autoZoom]="autoZoom"
@@ -50,13 +50,13 @@
           </svg:g>
         </ng-template>
 
-      </ngx-charts-directed-graph>
+      </ngx-graph>
     </div>
   </div>
   <div class="sidebar">
     <h1>
-      Ngx-<strong>Charts</strong>-DAG
-      <small class="subtitle">Directed Acyclic Graph Visualization</small>
+      NGX-<strong>Graph</strong>
+      <small class="subtitle">Graph Visualization for Angular</small>
     </h1>
 
     <div class="sidebar-body">
