--- a/demo/app.component.scss
+++ b/demo/app.component.scss
@@ -216,7 +216,7 @@ main {
 
   background: $color-bg-darker;
 
-  .ngx-charts {
+  .ngx-graph {
     .tooltip-anchor {
       fill: rgb(255,255,255);
     }
@@ -247,7 +247,7 @@ main {
   }
 }
 
-.directed-graph {
+.graph {
   .node {
     text {
       fill: #fff;
