--- a/release/graph/graph.component.css
+++ b/release/graph/graph.component.css
@@ -1,14 +1,14 @@
-.directed-graph {
+.graph {
   user-select: none; }
-  .directed-graph .edge {
+  .graph .edge {
     stroke: #666;
     fill: none; }
-    .directed-graph .edge .edge-label {
+    .graph .edge .edge-label {
       stroke: none;
       font-size: 12px;
       fill: #ffffff; }
-  .directed-graph .panning-rect {
+  .graph .panning-rect {
     fill: transparent;
     cursor: move; }
-  .directed-graph .node-group .node:focus {
+  .graph .node-group .node:focus {
     outline: none; }
