Zooming can be enabled/disabled
New @Input added to handle enable/disable zooming. Also
demo updated to demonstrate the new feature.

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -5,6 +5,7 @@
         #graph
         class="chart-container"
         [view]="view"
+        [enableZoom]="enableZoom"
         [autoZoom]="autoZoom"
         [panOnZoom]="panOnZoom"
         [panOffsetX]="panOffsetX"
@@ -108,6 +109,10 @@
             <input type="number" [(ngModel)]="height"><br />
             <button (click)="applyDimensions()">Apply dimensions</button>
           </div> <br />
+          <label>
+            <input type="checkbox" [checked]="enableZoom" (change)="toggleEnableZoom($event.target.checked)">
+            Enable Zoom
+          </label> <br />
           <label>
             <input type="checkbox" [checked]="autoZoom" (change)="toggleFitContainer(fitContainer, $event.target.checked)">
             Auto Zoom
