--- a/app.css
+++ b/app.css
@@ -1,19 +1,19 @@
-.directed-graph {
+.graph {
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none; }
-  .directed-graph .edge {
+  .graph .edge {
     stroke: #666;
     fill: none; }
-    .directed-graph .edge .edge-label {
+    .graph .edge .edge-label {
       stroke: none;
       font-size: 12px;
       fill: #ffffff; }
-  .directed-graph .panning-rect {
+  .graph .panning-rect {
     fill: transparent;
     cursor: move; }
-  .directed-graph .node-group .node:focus {
+  .graph .node-group .node:focus {
     outline: none; }
 
 /*# sourceMappingURL=app.map*/
