--- a/app.css
+++ b/app.css
@@ -11,7 +11,7 @@
       font-size: 12px;
       fill: #ffffff; }
   .graph .panning-rect {
-    fill: transparent;
+    fill: rgba(0, 0, 0, 0);
     cursor: move; }
   .graph .node-group .node:focus {
     outline: none; }
