--- a/src/graph/graph.component.html
+++ b/src/graph/graph.component.html
@@ -11,7 +11,18 @@
     </defs>
     <svg:rect class="panning-rect" [attr.width]="dims.width * 100" [attr.height]="dims.height * 100" [attr.transform]="'translate(' + ((-dims.width || 0) * 50) +',' + ((-dims.height || 0) *50) + ')' "
       (mousedown)="isPanning = true" />
-    <svg:g class="links">
+      <svg:g class="clusters">
+        <svg:g #clusterElement *ngFor="let node of graph.clusters; trackBy: trackNodeBy" class="node-group" [id]="node.id" [attr.transform]="node.transform"
+          (click)="onClick(node)">
+          <ng-template *ngIf="clusterTemplate" [ngTemplateOutlet]="clusterTemplate" [ngTemplateOutletContext]="{ $implicit: node }">
+          </ng-template>
+          <svg:g *ngIf="!clusterTemplate" class="node cluster">
+            <svg:rect [attr.width]="node.dimension.width" [attr.height]="node.dimension.height" [attr.fill]="node.data.color" />
+            <svg:text alignment-baseline="central" [attr.x]="10" [attr.y]="node.dimension.height / 2">{{node.label}}</svg:text>
+          </svg:g>
+        </svg:g>
+      </svg:g>
+      <svg:g class="links">
       <svg:g #linkElement *ngFor="let link of graph.edges; trackBy: trackLinkBy" class="link-group" [id]="link.id">
         <ng-template *ngIf="linkTemplate" [ngTemplateOutlet]="linkTemplate" [ngTemplateOutletContext]="{ $implicit: link }">
         </ng-template>
